--- a/chem.html
+++ b/chem.html
@@ -15,7 +15,7 @@
 		$.get('outputMatrixChem.csv', function(data) {
 			('#CSVSource').html('<pre>' + data + '</pre>');
 		});
-		$('#CSVTable').CSVToTable('outputMatrixChem.csv', { loadingImage: 'images/loading.gif', startLine: 0, headers: ['<img src=\"images/Chemistry_icon 60.png\"<br><p id= "color" class= "smaller">Chemical Company</p></br>', '<img src=\"images/ico_revenueDK48.png\"><br><p class= "smaller">Revenue</p></br>', '<img src=\"images/ico_profitDK48.png\"><br><p class="smaller">Profit</p></br>', '<img src=\"images/moneybags_light48.png\"><br><p class="smaller">Profit to Date</p></br>', '<img src=\"images/ico_priceDK48.png\"><br><p class="smaller">Cost Per Unit</p></br>'] });
+		$('#CSVTable').CSVToTable('outputMatrixChem.csv', { loadingImage: 'images/loading.gif', startLine: 0, headers: ['<img src=\"images/Chemistry_icon 60.png\"<br><p id= "color" class= "smaller">Chemical Co.</p></br>', '<img src=\"images/ico_revenueDK48.png\"><br><p class= "smaller">Revenue</p></br>', '<img src=\"images/ico_profitDK48.png\"><br><p class="smaller">Profit</p></br>', '<img src=\"images/moneybags_light48.png\"><br><p class="smaller">Profit to Date</p></br>', '<img src=\"images/ico_priceDK48.png\"><br><p class="smaller">Cost Per Unit</p></br>'] });
 	});
 	</script>
 </head>
