--- a/fin.html
+++ b/fin.html
@@ -15,7 +15,7 @@
 		$.get('outputMatrixVCFinance.csv', function(data) {
 			('#CSVSource').html('<pre>' + data + '</pre>');
 		});
-    $('#CSVTable').CSVToTable('outputMatrixVCFinance.csv', { loadingImage: 'images/loading.gif', startLine: 0, headers: ['<p class= "smaller">Value Chain</p><p class="smaller">Performance</p>','<img src=\"images/ico_communityDK48.png\"><br><p class= "smaller">Rep/Rel</p></br>', '<img src=\"images/ico_revenueDK48.png\"><br><p class= "smaller">Revenue</p></br>', '<img src=\"images/ico_profitDK48.png\"><br><p class+ "smaller">Profit</p></br>'] });
+    $('#CSVTable').CSVToTable('outputMatrixVCFinance.csv', { loadingImage: 'images/loading.gif', startLine: 0, headers: ['<p class= "smaller">Value Chain</p><p class="smaller">Performance</p>','<img src=\"images/ico_communityDK48.png\"><br><p class= "smaller">Social</p></br>', '<img src=\"images/ico_revenueDK48.png\"><br><p class= "smaller">Revenue</p></br>', '<img src=\"images/ico_profitDK48.png\"><br><p class+ "smaller">Profit</p></br>'] });
 	});
 	</script>
 </head>
